syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Vector.proto";

message NAFAIMHFEFG {
	uint32 group_id = 1;
	uint32 config_id = 2;
	Vector pos = 3;
}
